@@ -4,6 +4,7 @@ test-negative
 test-pct5d
 test-unsigned
 test-str
+test-linux-write
 
 ###################
 # backup files
