@@ -1,5 +1,16 @@
 2016-10-27  Eric Herman <eric@freesa.org>
 
+	Stub-out what I imagine we will need for actual printf,
+	write a linux implementation
+
+	* src/eh-printf.h
+	* src/eh-printf-linux.c
+	* tests/test-linux-write.c
+	* Makefile.am
+	* .gitignore
+
+2016-10-27  Eric Herman <eric@freesa.org>
+
 	Use CHAR_BIT rather than define bytes to be 8 bits
 	Allow the definition of EH_CHAR_BIT to avoid #include <limits.h>
 	use EH_CHAR_BIT in EH_LONG_BASE2_ASCII_BUF_SIZE
